// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`runAdCopy > snapshot: dental on { brand: 'BrightSmile Dental', industry: 'dental', audience: 'adults in Austin overdue for a cleaning', offer: '$1 first visit with full exam + cleaning', valueProp: 'A confident smile, near you', painPoint: 'sensitivity and stained teeth', payoff: 'first visit for $1', proofPoint: '1,200 patients', timeToValue: 'your first opening this week', ctaPrimary: 'Book my visit', urlPath: { segment1: 'austin', segment2: 'new-patient' }, locale: 'en-US' } with google angle 1`] = `
{
  "angle": "trust",
  "characterBudgets": {
    "description": {
      "limit": 90,
      "overflow": false,
      "used": 72,
    },
    "headline": {
      "limit": 30,
      "overflow": false,
      "used": 28,
    },
    "primaryText": {
      "limit": 90,
      "overflow": false,
      "used": 72,
    },
  },
  "cta": "Learn more",
  "description": "Putting your dental budget on the line? Choose carefully. Book my visit.",
  "fingerprint": "2e2ceafd",
  "headline": "BrightSmile Dental: the safe",
  "language": "en-US",
  "platform": "google",
  "platformPayload": {
    "payload": {
      "descriptions": [
        "Putting your dental budget on the line? Choose carefully. Book my visit.",
        "first visit for $1, backed by guarantee. your first opening this week.",
        "1,200 patients. Book my visit.",
        "A confident smile, near you. No long contracts.",
      ],
      "headlines": [
        "BrightSmile Dental: the safe",
        "1,200 patients trust",
        "1,200 patients verified",
        "BrightSmile Dental vs",
        "Need a dental partner you can",
        "BrightSmile Dental: A",
        "first visit for $1.",
        "your first opening this week.",
        "Trust dental",
        "Book my visit",
        "Free dental quote",
        "dental that works",
        "1,200 patients",
        "Local dental pros",
        "New: A confident smile, near",
      ],
      "pathFragments": [
        "austin",
        "new-patient",
      ],
    },
    "platform": "google",
  },
  "primaryText": "Putting your dental budget on the line? Choose carefully. Book my visit.",
}
`;

exports[`runAdCopy > snapshot: dental on { brand: 'BrightSmile Dental', industry: 'dental', audience: 'adults in Austin overdue for a cleaning', offer: '$1 first visit with full exam + cleaning', valueProp: 'A confident smile, near you', painPoint: 'sensitivity and stained teeth', payoff: 'first visit for $1', proofPoint: '1,200 patients', timeToValue: 'your first opening this week', ctaPrimary: 'Book my visit', urlPath: { segment1: 'austin', segment2: 'new-patient' }, locale: 'en-US' } with meta angle 1`] = `
{
  "angle": "convenience",
  "characterBudgets": {
    "description": {
      "limit": 30,
      "overflow": false,
      "used": 28,
    },
    "headline": {
      "limit": 40,
      "overflow": false,
      "used": 19,
    },
    "primaryText": {
      "limit": 125,
      "overflow": false,
      "used": 26,
    },
  },
  "cta": "Book my visit",
  "description": "A confident smile, near you.",
  "fingerprint": "2ae425e0",
  "headline": "dental the easy way",
  "language": "en-US",
  "platform": "meta",
  "platformPayload": {
    "payload": {
      "cta": "Book my visit",
      "description": [
        "A confident smile, near you.",
        "Try free. Cancel anytime.",
        "Local dental options,",
      ],
      "headline": [
        "dental the easy way",
        "What if dental was simple?",
        "One click. first visit for $1.",
        "Easier than the legacy way",
        "1,200 patients loved how easy it was",
      ],
      "primaryText": [
        "Skip the dental runaround.",
        "1,200 patients liked how easy it was.",
        "Click. Done. first visit for $1.",
        "your first opening this week. Zero setup.",
        "Quietly easy. That's the whole pitch.",
      ],
    },
    "platform": "meta",
  },
  "primaryText": "Skip the dental runaround.",
}
`;

exports[`runAdCopy > snapshot: solar on { brand: 'GoFunnelAI', industry: 'solar', audience: 'homeowners with $250+ monthly power bills', offer: 'Personalized rooftop savings plan', valueProp: 'See your exact rooftop savings', painPoint: 'rising power bills', payoff: 'save up to $1,800 per year', proofPoint: '12,400 homeowners', timeToValue: 'under 90 seconds', ctaPrimary: 'Get my free quote', urlPath: { segment1: 'solar', segment2: 'savings' }, locale: 'en-US' } with google angle 1`] = `
{
  "angle": "roi",
  "characterBudgets": {
    "description": {
      "limit": 90,
      "overflow": false,
      "used": 66,
    },
    "headline": {
      "limit": 30,
      "overflow": false,
      "used": 26,
    },
    "primaryText": {
      "limit": 90,
      "overflow": false,
      "used": 66,
    },
  },
  "cta": "Learn more",
  "description": "Doing the math on solar? Run our numbers first. Get my free quote.",
  "fingerprint": "23a8cd82",
  "headline": "save up to $1,800 per year",
  "language": "en-US",
  "platform": "google",
  "platformPayload": {
    "payload": {
      "descriptions": [
        "Doing the math on solar? Run our numbers first. Get my free quote.",
        "save up to $1,800 per year. See the line items. under 90 seconds.",
        "12,400 homeowners. Get my free quote.",
        "See your exact rooftop savings. No long contracts.",
      ],
      "headlines": [
        "save up to $1,800 per year",
        "save up to $1,800 per year",
        "12,400 homeowners hit save up",
        "GoFunnelAI vs status quo:",
        "Worth save up to $1,800 per",
        "GoFunnelAI: See your exact",
        "save up to $1,800 per year.",
        "under 90 seconds.",
        "ROI solar",
        "Get my free quote",
        "Free solar quote",
        "solar that works",
        "12,400 homeowners",
        "Local solar pros",
        "New: See your exact rooftop",
      ],
      "pathFragments": [
        "solar",
        "savings",
      ],
    },
    "platform": "google",
  },
  "primaryText": "Doing the math on solar? Run our numbers first. Get my free quote.",
}
`;

exports[`runAdCopy > snapshot: solar on { brand: 'GoFunnelAI', industry: 'solar', audience: 'homeowners with $250+ monthly power bills', offer: 'Personalized rooftop savings plan', valueProp: 'See your exact rooftop savings', painPoint: 'rising power bills', payoff: 'save up to $1,800 per year', proofPoint: '12,400 homeowners', timeToValue: 'under 90 seconds', ctaPrimary: 'Get my free quote', urlPath: { segment1: 'solar', segment2: 'savings' }, locale: 'en-US' } with linkedin angle 1`] = `
{
  "angle": "proof",
  "characterBudgets": {
    "description": {
      "limit": 100,
      "overflow": false,
      "used": 46,
    },
    "headline": {
      "limit": 70,
      "overflow": false,
      "used": 34,
    },
    "primaryText": {
      "limit": 150,
      "overflow": false,
      "used": 65,
    },
  },
  "cta": "Get my free quote",
  "description": "save up to $1,800 per year. Get my free quote.",
  "fingerprint": "e7352b1f",
  "headline": "12,400 homeowners verified results",
  "language": "en-US",
  "platform": "linkedin",
  "platformPayload": {
    "payload": {
      "cta": "Get my free quote",
      "description": "save up to $1,800 per year. Get my free quote.",
      "headline": "12,400 homeowners verified results",
      "introText": "12,400 homeowners can't be wrong. See your exact rooftop savings.",
    },
    "platform": "linkedin",
  },
  "primaryText": "12,400 homeowners can't be wrong. See your exact rooftop savings.",
}
`;

exports[`runAdCopy > snapshot: solar on { brand: 'GoFunnelAI', industry: 'solar', audience: 'homeowners with $250+ monthly power bills', offer: 'Personalized rooftop savings plan', valueProp: 'See your exact rooftop savings', painPoint: 'rising power bills', payoff: 'save up to $1,800 per year', proofPoint: '12,400 homeowners', timeToValue: 'under 90 seconds', ctaPrimary: 'Get my free quote', urlPath: { segment1: 'solar', segment2: 'savings' }, locale: 'en-US' } with meta angle 1`] = `
{
  "angle": "pain",
  "characterBudgets": {
    "description": {
      "limit": 30,
      "overflow": false,
      "used": 29,
    },
    "headline": {
      "limit": 40,
      "overflow": false,
      "used": 32,
    },
    "primaryText": {
      "limit": 125,
      "overflow": false,
      "used": 47,
    },
  },
  "cta": "Get my free quote",
  "description": "GoFunnelAI fixes rising power",
  "fingerprint": "9297edce",
  "headline": "Stop rising power bills for good",
  "language": "en-US",
  "platform": "meta",
  "platformPayload": {
    "payload": {
      "cta": "Get my free quote",
      "description": [
        "GoFunnelAI fixes rising power",
        "Try free. No contracts.",
        "Trusted by local solar buyers.",
      ],
      "headline": [
        "Stop rising power bills for good",
        "Still stuck with rising power bills?",
        "save up to $1,800 per year — no more",
        "rising power bills vs. GoFunnelAI",
        "12,400 homeowners chose to stop rising",
      ],
      "primaryText": [
        "Tired of rising power bills? You are not alone.",
        "12,400 homeowners stopped fighting rising power bills with GoFunnelAI.",
        "Stop rising power bills. Start save up to $1,800 per year.",
        "In under 90 seconds, GoFunnelAI replaces rising power bills.",
        "If rising power bills sounds familiar, this is for you.",
      ],
    },
    "platform": "meta",
  },
  "primaryText": "Tired of rising power bills? You are not alone.",
}
`;

exports[`runAdCopy > snapshot: solar on { brand: 'GoFunnelAI', industry: 'solar', audience: 'homeowners with $250+ monthly power bills', offer: 'Personalized rooftop savings plan', valueProp: 'See your exact rooftop savings', painPoint: 'rising power bills', payoff: 'save up to $1,800 per year', proofPoint: '12,400 homeowners', timeToValue: 'under 90 seconds', ctaPrimary: 'Get my free quote', urlPath: { segment1: 'solar', segment2: 'savings' }, locale: 'en-US' } with tiktok angle 1`] = `
{
  "angle": "speed",
  "characterBudgets": {
    "description": {
      "limit": null,
      "overflow": false,
      "used": 0,
    },
    "headline": {
      "limit": 40,
      "overflow": false,
      "used": 28,
    },
    "primaryText": {
      "limit": 100,
      "overflow": false,
      "used": 97,
    },
  },
  "cta": "Get my free quote",
  "description": null,
  "fingerprint": "fec2cdf0",
  "headline": "In under 90 seconds? No way.",
  "language": "en-US",
  "platform": "tiktok",
  "platformPayload": {
    "payload": {
      "bodyScript": "Here's the thing: rising power bills. GoFunnelAI fixes it under 90 seconds. save up to $1,800 per",
      "cta": "Get my free quote",
      "hook": "In under 90 seconds? No way.",
    },
    "platform": "tiktok",
  },
  "primaryText": "Here's the thing: rising power bills. GoFunnelAI fixes it under 90 seconds. save up to $1,800 per",
}
`;

exports[`runAdCopy > snapshot: supplements on { brand: 'VitalLine', industry: 'supplements', audience: 'adults 35+ tracking daily energy', offer: '30-day daily wellness bundle', valueProp: 'Daily wellness, simplified', painPoint: 'afternoon energy crashes', payoff: 'feel steady through 4pm', proofPoint: '9,800 daily users', timeToValue: 'in 14 days', ctaPrimary: 'Try the bundle', urlPath: { segment1: 'wellness', segment2: 'energy' }, locale: 'en-US' } with meta angle 1`] = `
{
  "angle": "proof",
  "characterBudgets": {
    "description": {
      "limit": 30,
      "overflow": false,
      "used": 26,
    },
    "headline": {
      "limit": 40,
      "overflow": false,
      "used": 33,
    },
    "primaryText": {
      "limit": 125,
      "overflow": false,
      "used": 67,
    },
  },
  "cta": "Try the bundle",
  "description": "9,800 daily users hit feel",
  "fingerprint": "5d0c991b",
  "headline": "9,800 daily users trust VitalLine",
  "language": "en-US",
  "platform": "meta",
  "platformPayload": {
    "payload": {
      "cta": "Try the bundle",
      "description": [
        "9,800 daily users hit feel",
        "Real reviews. Real numbers.",
        "Local supplements customers",
      ],
      "headline": [
        "9,800 daily users trust VitalLine",
        "9,800 daily users can't all be wrong,",
        "9,800 daily users and counting",
        "VitalLine > alternatives, say 9,800",
        "9,800 daily users verified results",
      ],
      "primaryText": [
        "Wondering if VitalLine works for supplements? Look at the receipts.",
        "9,800 daily users can't be wrong.",
        "9,800 daily users reached feel steady through 4pm with VitalLine.",
        "Most hit results in in 14 days.",
        "Receipts > promises.",
      ],
    },
    "platform": "meta",
  },
  "primaryText": "Wondering if VitalLine works for supplements? Look at the receipts.",
}
`;

exports[`runAdCopy > snapshot: supplements on { brand: 'VitalLine', industry: 'supplements', audience: 'adults 35+ tracking daily energy', offer: '30-day daily wellness bundle', valueProp: 'Daily wellness, simplified', painPoint: 'afternoon energy crashes', payoff: 'feel steady through 4pm', proofPoint: '9,800 daily users', timeToValue: 'in 14 days', ctaPrimary: 'Try the bundle', urlPath: { segment1: 'wellness', segment2: 'energy' }, locale: 'en-US' } with tiktok angle 1`] = `
{
  "angle": "convenience",
  "characterBudgets": {
    "description": {
      "limit": null,
      "overflow": false,
      "used": 0,
    },
    "headline": {
      "limit": 40,
      "overflow": false,
      "used": 34,
    },
    "primaryText": {
      "limit": 100,
      "overflow": false,
      "used": 99,
    },
  },
  "cta": "Try the bundle",
  "description": null,
  "fingerprint": "a3be690b",
  "headline": "Wait — daily wellness, simplified?",
  "language": "en-US",
  "platform": "tiktok",
  "platformPayload": {
    "payload": {
      "bodyScript": "Here's the thing: afternoon energy crashes. VitalLine fixes it in 14 days. feel steady through 4pm.",
      "cta": "Try the bundle",
      "hook": "Wait — daily wellness, simplified?",
    },
    "platform": "tiktok",
  },
  "primaryText": "Here's the thing: afternoon energy crashes. VitalLine fixes it in 14 days. feel steady through 4pm.",
}
`;
